--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ categories_path : categories.html
 tags_path : tags.html
 
 #BASE_PATH : http://blog.ankanbiswas.in/uno-dbyll
-BASE_PATH : http://goileo.top
+BASE_PATH : http://goileolee.github.io
 
 description : 深沉的意志，恢宏的想象和炽热的情感
 title : Goileo Lee
